remove other picture

--- a/index.html
+++ b/index.html
@@ -20,33 +20,18 @@
             <div class="row">
     
                 <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="/img/08-10-22_1st.jpg">
+                    <a class="lightbox" href="https://github.com/grcgrm/love/blob/main/img/08-10-22_1st.jpg">
                         <img src="img\08-10-22_1st.jpg" alt="First picture of us">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="/img/08-10-22_fave.jpg">
+                    <a class="lightbox" href="https://github.com/grcgrm/love/blob/main/img/08-10-22_fave.jpg">
                         <img src="img\08-10-22_fave.jpg" alt="All time fave">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/tunnel.jpg">
-                        <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/tunnel.jpg" alt="Tunnel">
-                    </a>
-                </div>
-                <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/traffic.jpg">
-                        <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/traffic.jpg" alt="Traffic">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/rails.jpg">
-                        <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/rails.jpg" alt="Coast">
-                    </a>
-                </div> 
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/coast.jpg">
-                        <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/coast.jpg" alt="Rails">
+                    <a class="lightbox" href="https://github.com/grcgrm/love/blob/main/img/08-10-22_coffee.jpg">
+                        <img src="img/08-10-22_coffee.jpg" alt="First coffee together">
                     </a>
                 </div>
     
