working image link

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <div class="row">
     
                 <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="https://github.com/grcgrm/love/blob/main/img/08-10-22_1st.jpg">
+                    <a class="lightbox" href="https://grcgrm.github.io/love/img/08-10-22_1st.jpg">
                         <img src="img\08-10-22_1st.jpg" alt="First picture of us">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="https://github.com/grcgrm/love/blob/main/img/08-10-22_fave.jpg">
+                    <a class="lightbox" href="https://grcgrm.github.io/love/img/08-10-22_fave.jpg">
                         <img src="img\08-10-22_fave.jpg" alt="All time fave">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="https://github.com/grcgrm/love/blob/main/img/08-10-22_coffee.jpg">
+                    <a class="lightbox" href="https://grcgrm.github.io/love/img/08-10-22_coffee.jpg">
                         <img src="img/08-10-22_coffee.jpg" alt="First coffee together">
                     </a>
                 </div>
