--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
  <link rel="stylesheet" href="love.css">
-<title>Let's Go!</title>
+<title>Hello love</title>
 </head>
 <body>
     
