--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
  <link rel="stylesheet" href="love.css">
+ <script src="love.js" defer></script>
 <title>Hello love</title>
 </head>
 <body>
