--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
     <div class="wrapper">
         <i id="left" class="fa-solid fa-angle-left"></i>
         <div class="carousel">
-          <img src="img/memories with love.png" alt="img">
-          <img src="img/first date.png" alt="img">
-          <img src="images/img-3.jpg" alt="img">
-          <img src="images/img-4.jpg" alt="img">
-          <img src="images/img-5.jpg" alt="img">
-          <img src="images/img-6.jpg" alt="img">
-          <img src="images/img-7.jpg" alt="img">
-          <img src="images/img-8.jpg" alt="img">
-          <img src="images/img-9.jpg" alt="img">
+          <img src="img/memories with love.png" alt="memories with love">
+          <img src="img/first date.png" alt="first date">
         </div>
         <i id="right" class="fa-solid fa-angle-right"></i>
       </div>
