add sliding nav

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 <title>Hello love</title>
   </head>
   <body>
+
     <div class="wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
         <div class="carousel">
           <img src="img/memories with love.png" alt="memories with love">
           <img src="img/first date.png" alt="first date">
+          <img src="img/with you till midnight.png" alt="with you till midnight">
         </div>
-        <i id="right" class="fa-solid fa-angle-right"></i>
+        <div class="dots-container"></div>
       </div>
+        
+
+      
+
 </body>
 </html>
